--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.1/underscore-min.js"></script>
-
 </head>
 
 <body>
+  <div class="container">
   <h1>Tic Tac Toe</h1>
-  <button id="newGame">New Game</button>
-
-  <!-- create a 3x3 table -->
+    <!-- create a 3x3 table -->
   <table>
     <tr>
       <td id="square1" class="square"></td>
@@ -29,6 +29,8 @@
       <td id="square9" class="square"></td>
     </tr>
   </table>
+  <button id="newGame">RESET BOARD</button>
+  </div>
 
   <script src="app.js"></script>
   <script src="playRules.js"></script>
